unpackaged/main/default/objects/Jira_Dev_Issue__c/Jira_Dev_Issue__c.object-meta.xml
<CustomObject>
    <description>Link to one or more Jira Dev Issues and Service Cloud</description>
    <label>Jira Dev Issue</label>
    <nameField>
        <label>Jira Dev Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Dev Issues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>