unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>Assigned To on the Jira Dev Issue</description>
    <label>Assigned To</label>
    <length>50</length>
    <type>Text</type>
</CustomField>