unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Jira Dev Issues</relationshipLabel>
    <relationshipName>Jira_Dev_Issues</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>