unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <label>Component</label>
    <length>120</length>
    <type>Text</type>
</CustomField>