unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of JIra issue</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>