unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Fix_Version__c.field-meta.xml
<CustomField>
    <fullName>Fix_Version__c</fullName>
    <label>Fix Version</label>
    <length>120</length>
    <type>Text</type>
</CustomField>