unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Jira Issue Type, (eg Bug, Story)</description>
    <label>Issue Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>