unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product on the Jira Dev Issue</description>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
</CustomField>