unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <description>Resolution Jira Dev Issue</description>
    <label>Resolution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>