unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of individual Jira Dev Issue</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>