unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Jira Issue Summary</description>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>