unpackaged/main/default/objects/Jira_Dev_Issue__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <length>50</length>
    <type>Text</type>
</CustomField>