unpackaged/main/default/objects/Jira_Dev_Issue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Issue_Type__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>